5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4133/executions/1585_2895.log
== TEST (2019-03-21 11:34:53) 
-- CODE:
float(input("quantidade de jogos: "))
var = input("valor unitario: ")
int("valor do frete: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:34:56) 
-- CODE:
float(input("quantidade de jogos: "))
var = input("valor unitario: ")
int("valor do frete: ")
-- EXECUTION TIME:
0.174934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 3, in <module>
    int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:35:19) 
-- CODE:
float(input("quantidade de jogos: "))
var = input("valor unitario: ")
int("valor do frete: ")
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:35:22) 
-- CODE:
float(input("quantidade de jogos: "))
var = input("valor unitario: ")
int("valor do frete: ")
print(total)
-- EXECUTION TIME:
0.21158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 3, in <module>
    int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:46) 
-- CODE:
nA =float(input("quantidade de jogos: "))
nB = var = input("valor unitario: ")
nC = int("valor do frete: ")
total = nA + nB + nC
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:37:48) 
-- CODE:
nA =float(input("quantidade de jogos: "))
nB = var = input("valor unitario: ")
nC = int("valor do frete: ")
total = nA + nB + nC
print(total)
-- EXECUTION TIME:
0.208308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 3, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:37:59) 
-- CODE:
nA = float(input("quantidade de jogos: "))
nB = var = input("valor unitario: ")
nC = int("valor do frete: ")
total = nA + nB + nC
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:38:00) 
-- CODE:
nA = float(input("quantidade de jogos: "))
nB = var = input("valor unitario: ")
nC = int("valor do frete: ")
total = nA + nB + nC
print(total)
-- EXECUTION TIME:
0.192604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 3, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:10) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))
nB = var = input("valor unitario:280.0 ")
nC = int("valor do frete:45.0 ")
total = nA + nB + nC
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:39:12) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))
nB = var = input("valor unitario:280.0 ")
nC = int("valor do frete:45.0 ")
total = nA + nB + nC
print(total)
-- EXECUTION TIME:
0.167001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 3, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:18) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))
nB = var = input("valor unitario:280.0 ")
nC = int("valor do frete:45.0 ")
total = nA + nB + nC
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:19) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))
nB = var = input("valor unitario:280.0 ")
nC = int("valor do frete:45.0 ")
total = nA + nB + nC
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:42:21) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))
nB = var = input("valor unitario:280.0 ")
nC = int("valor do frete:45.0 ")
total = nA + nB + nC
print(total)
-- EXECUTION TIME:
0.132099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 3, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:22) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))

nB = var = input("valor unitario:280.0 ")

nC = int("valor do frete:45.0 ")

total = nA + nB + nC

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:43:24) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))

nB = var = input("valor unitario:280.0 ")

nC = int("valor do frete:45.0 ")

total = nA + nB + nC

print(total)
-- EXECUTION TIME:
0.16833
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:28) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))

nB = var = input("valor unitario:280.0 ")

nC = int("valor do frete:45.0 ")

total = nA + nB + nC

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    nC = int("valor do frete:45.0 ")
ValueError: invalid literal for int() with base 10: 'valor do frete:45.0 '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:09) 
-- CODE:
nA = float(input("quantidade de jogos:8 "))

nB = var = input("valor unitario:280.0 ")

nC = int("valor do frete: ")

total = nA + nB + nC

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:46) 
-- CODE:
nA = input("quantidade de jogos:8 ")

nB = var = input("valor unitario:280.0 ")

nC = int("valor do frete: ")

total = nA + nB + nC

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:44:49) 
-- CODE:
nA = input("quantidade de jogos:8 ")

nB = var = input("valor unitario:280.0 ")

nC = int("valor do frete: ")

total = nA + nB + nC

print(total)
-- EXECUTION TIME:
0.14295
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    nC = int("valor do frete: ")
ValueError: invalid literal for int() with base 10: 'valor do frete: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:57) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valor unitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos + valor unitario + frete)
-- ERROR:
File "XXXX", line 2
    valor unitario = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:56:00) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valor unitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos + valor unitario + frete)
-- EXECUTION TIME:
0.197902
-- ERROR:
  File "/home/codebench/codes/1585/2895/main.py", line 2
    valor unitario = float(input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:15) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valorunitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos + valorunitario + frete)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:56:17) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valorunitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos + valorunitario + frete)
-- EXECUTION TIME:
0.137441
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:28) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valorunitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos + valorunitario + frete)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:56:42) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valorunitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos + valorunitario + frete)
-- EXECUTION TIME:
0.162618
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:07) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valorunitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos * valorunitario + frete)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:57:09) 
-- CODE:
jogos = float(input("quantidade de jogos: "))
valorunitario = float(input("valor unitario: "))
frete = float(input("valor do frete: "))

print(jogos * valorunitario + frete)
-- EXECUTION TIME:
0.148903
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
